Working with A6 sizes.

--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "main": "index.js",
   "license": "MIT",
   "dependencies": {
+    "colors": "^1.4.0",
+    "commander": "^10.0.0",
     "hanzi-writer": "^3.5.0",
     "hanzi-writer-data": "^2.0.1",
     "pdfkit": "^0.13.0",
