--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "worksheet-generator",
+  "name": "chinese-worksheet-generator",
   "version": "1.0.0",
   "main": "index.js",
   "license": "MIT",
